refactor: query refactoring